[package]
name = "cissp-coach"
version = "0.1.0"
edition = "2021"
description = "Local CISSP study coach — adaptive 50-question batches, server-side LLM proxy, SQLite persistence."
license = "MIT"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
hyper = { version = "1", features = ["server"] }

# DB
rusqlite = { version = "0.31", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"

# Config / env
dotenvy = "0.15"

# Serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client for LLM streaming
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
bytes = "1"
futures-util = "0.3"
tokio-stream = "0.1"
async-stream = "0.3"

# Misc
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rust-embed = { version = "8", features = ["interpolate-folder-path"] }
mime_guess = "2"
eyre = "0.6"
anyhow = "1"
thiserror = "1"
chrono = "0.4"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
opt-level = 3
